# sandie-ndn

./: .gitignore  LICENSE.md  README.md  pub_ssh_keys.md
.devcontainer/: devcontainer.json
NDNc/: .clang-format  CMakeLists.txt  Dockerfile  Makefile  README.md  main.cpp  ping-server.cpp  ping-server.hpp
NDNc/app/benchmark/: README.md
NDNc/app/benchmark/client/: ft-client-utils.hpp  ft-client.cpp  ft-client.hpp  indicators.hpp  influxdb_upload.hpp  main.cpp
NDNc/app/benchmark/client/influxdb/: influxdb_upload.hpp
NDNc/app/benchmark/common/: file-metadata.hpp  ft-naming-scheme.hpp  naming-scheme.hpp  rdr-file.hpp
NDNc/app/benchmark/server/: ft-server.cpp  ft-server.hpp  main.cpp
NDNc/app/file-transfer-benchmark/client/: file-transfer-client.cpp  file-transfer-client.hpp  indicators.LICENSE.md  indicators.hpp  indicators.termcolor.LICENSE.md  main.cpp
NDNc/app/file-transfer-benchmark/server/: file-transfer-server.cpp  file-transfer-server.hpp  main.cpp
NDNc/app/file-transfer/client/: ft-client-utils.hpp  ft-client.cpp  ft-client.hpp  main.cpp
NDNc/app/file-transfer/client/indicators/: indicators.hpp
NDNc/app/file-transfer/client/influxdb/: influxdb_upload.hpp
NDNc/app/file-transfer/common/: file-metadata.hpp  ft-naming-scheme.hpp  rdr-file.hpp
NDNc/app/file-transfer/server/: ft-server.cpp  ft-server.hpp  main.cpp
NDNc/app/ping/: README.md  common.hpp  main.cpp  ping-client.cpp  ping-client.hpp  ping-server.cpp  ping-server.hpp
NDNc/app/ping/client/: main.cpp  ping-client.cpp  ping-client.hpp
NDNc/app/ping/server/: main.cpp  ping-server.cpp  ping-server.hpp
NDNc/cmake/: Findmemif.cmake  Findndn-cxx.cmake  Findxrootd-utils.cmake
NDNc/codecs/: encoding.hpp
NDNc/congestion-control/: pending-interest.hpp  pipeline-common.hpp  pipeline-interests-aimd.cpp  pipeline-interests-aimd.hpp  pipeline-interests-fixed.cpp  pipeline-interests-fixed.hpp  pipeline-interests.hpp  pipeline-type.hpp
NDNc/docker/: xrootd-ndn.sample.cfg
NDNc/docs/: context.puml
NDNc/encoding/: encoding.hpp
NDNc/face/: face.cpp  face.hpp  memif-connection.hpp  memif-constants.hpp  memif.cpp  memif.hpp  packet-handler.cpp  packet-handler.hpp  pipeline-interests-fixed.cpp  pipeline-interests-fixed.hpp  pipeline-interests.cpp  pipeline-interests.hpp  transport.hpp
NDNc/graphql/: client.cpp  client.hpp  json_helper.hpp
NDNc/lib/posix/: consumer.cpp  consumer.hpp  dir.cpp  dir.hpp  file-metadata.hpp  file-rdr.hpp  file-system-object.hpp  file.cpp  file.hpp
NDNc/lib/xrdndnoss/: xrd-ndn-oss-dir.cpp  xrd-ndn-oss-dir.hpp  xrd-ndn-oss-file.cpp  xrd-ndn-oss-file.hpp  xrd-ndn-oss-version.hpp.in  xrd-ndn-oss.cpp  xrd-ndn-oss.hpp
NDNc/lib/xrdndnposix/: xrd-ndn-oss-dir.cpp  xrd-ndn-oss-dir.hpp  xrd-ndn-oss-file.cpp  xrd-ndn-oss.cpp
NDNc/logger/: CMakeLists.txt  logger.hpp
NDNc/lp/: pit-token.hpp
NDNc/mgmt/: client.cpp  client.hpp  json_helper.hpp
NDNc/pipeline/: pending-interest.hpp  pipeline-interests-aimd.cpp  pipeline-interests-aimd.hpp  pipeline-interests-constants.hpp  pipeline-interests-fixed.cpp  pipeline-interests-fixed.hpp  pipeline-interests.hpp  pipeline-type.hpp
NDNc/utils/: measurements-reporter.hpp  random-number-generator.hpp  threadsafe-uint64-generator.hpp
docs/: README.md
go/: Makefile  README.md  go.mod  go.sum
packaging/: packaging.md  sandie.repo  tier2local.repo
pub_keys/: ciordach.pub  jbalcas.pub  sirvinskas.pub
sc19-demo/: database_sc19-vip.csv  database_sc19.csv
vs-workspace/: XROOTD-NDN.code-workspace
xrootd-ndn-dpdk-oss-plugin/: Makefile  README.md  Rakefile  (+9 more)
xrootd-ndn-oss-plugin/: .clang-format  CMakeLists.txt  Makefile  README.md  XROOTD-NDN.code-workspace
xrootd-ndn-oss-plugin/cmake/: Findndn-cxx.cmake  Findxrootd-utils.cmake
xrootd-ndn-oss-plugin/docker/: Dockerfile  README.md
xrootd-ndn-oss-plugin/rpm/: nfd.xrootd.conf.sample  xrdndn-producer.spec  xrootd-ndn-fs.spec  xrootd.sample.ndnfd.cfg
xrootd-ndn-oss-plugin/rpms/: xrdndn-producer.spec  xrootd-ndn-fs.spec
xrootd-ndn-oss-plugin/rpms/XrdNdnFS/: xrootd-ndn-fs.spec  xrootd-ndn.sample.cfg
xrootd-ndn-oss-plugin/rpms/xrdndn-consumer/: xrdndn-consumer-environment  xrdndn-consumer.spec
xrootd-ndn-oss-plugin/rpms/xrdndn-producer/: nfd.xrdndn-producer.conf.sample  nfd.xrootd.conf.sample  xrdndn-producer-environment  xrdndn-producer-rsyslog.conf  xrdndn-producer.sample.cfg  xrdndn-producer.service  xrdndn-producer.spec
xrootd-ndn-oss-plugin/src/: test-ndn-consumer.cpp  test-ndn-producer.cpp  xrdndn-common.hh  xrdndn-consumer-main.cc  xrdndn-consumer.cc  xrdndn-consumer.hh  xrdndn-dfh-interface.hh  xrdndn-directory-file-handler.hh  xrdndn-dispatcher.hh  xrdndn-file-handler.cc  xrdndn-file-handler.hh  xrdndn-file-object.hh  xrdndn-lru-cache.hh  xrdndn-namespaces.hh  xrdndn-packager.cc  xrdndn-producer-main.cc  xrdndn-producer.cc  xrdndn-producer.hh  xrdndn-thread-safe-umap.hh  xrdndn-utils.hh
xrootd-ndn-oss-plugin/src/common/: xrdndn-common.hh  xrdndn-dfh-interface.hh  xrdndn-logger.hh  xrdndn-namespace.hh  xrdndn-thread-safe-umap.hh  xrdndn-throughput.hh  xrdndn-utils.hh
xrootd-ndn-oss-plugin/src/xrdndn-consumer/: xrdndn-consumer-main.cc  xrdndn-consumer-options.hh  xrdndn-consumer-progress-bar.hh  xrdndn-consumer-version.hh.in  xrdndn-consumer.cc  xrdndn-consumer.hh  xrdndn-data-fetcher.cc  xrdndn-data-fetcher.hh  xrdndn-pipeline.cc  xrdndn-pipeline.hh
xrootd-ndn-oss-plugin/src/xrdndn-producer/: xrdndn-file-handler.cc  xrdndn-file-handler.hh  xrdndn-interest-manager.cc  xrdndn-interest-manager.hh  xrdndn-lru-cache.hh  xrdndn-packager.cc  xrdndn-packager.hh  xrdndn-producer-main.cc  xrdndn-producer-options.hh  xrdndn-producer-version.hh.in  xrdndn-producer.cc  xrdndn-producer.hh
xrootd-ndn-oss-plugin/src/xrootd-ndn-fs/: xrdndn-fs-version.hh.in  xrdndn-oss-dir.cc  xrdndn-oss-dir.hh  xrdndn-oss-file.cc  xrdndn-oss-file.hh  xrdndn-oss.cc  xrdndn-oss.hh  xrdndn.cc  xrdndnfs.cc  xrdndnfs.hh
xrootd-ndn-oss-plugin/src/xrootd-xrdndn-dfs/: xrdndn.cc  xrdndndfs.cc  xrdndndfs.hh
xrootd-ndn-oss-plugin/src/xrootd-xrdndnfs/: xrdndn.cc  xrdndndfs.cc  xrdndndfs.hh
(+231 files in other folders)
